<resources>
    <string name="app_name">茶花援助</string>

    <string name="action_settings">Settings</string>

    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>
    <string name="password">密码</string>
    <string name="account">账号</string>

    <string name="name">姓名</string>
    <string name="phone_num">手机号</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="register_tip">填写前请查看《注册须知》</string>
    <string name="get_yzm">获取验证码</string>
    <string name="about">关于与反馈</string>
    <string name="logout">注销</string>
    <string name="head">head</string>
    <string name="head_bg">background</string>
    <string name="tools_id">ID:023</string>
    <string name="tools_name">用户昵称</string>
    <string name="applier">申请人：</string>
    <string name="fl">分　类：</string>
    <string name="describe">详  情：</string>
    <string name="submit">提交</string>
    <string name="click_choose">点击选择</string>
    <string name="comment_input">提交你的想法~</string>

    <string name="help_room">申请中心</string>
    <string name="id_card">身份证</string>
    <string name="sex">性别</string>
    <string name="nation">民族</string>
    <string name="hj_place">户籍地</string>
    <string name="domicile">居住地</string>
    <string name="phone">联系电话</string>
    <string name="people_category">人群类别</string>
    <string name="help_category">援助类型</string>
    <string name="dailiren">代理人</string>
    <string name="dailirenid">代理人身份证</string>
    <string name="fddlr">法定代理人</string>
    <string name="wtdlr">委托代理人</string>
    <string name="id_info_z">*身份证正面</string>
    <string name="id_info_b">*身份证背面</string>
    <string name="notice_edit">*请真实填写您的信息！</string>
    <string name="example_id_card">15位或18位</string>
    <string name="example_name">如：张XX</string>
    <string name="example_domicile">您的常住地！</string>
    <string name="id_data">人群类别证明（低保证、残疾人证、临时救助站、残疾人证、法律援助卡等任意一个。若无可不上传）</string>


    <string name="welcome_rules">用户须知\n
操作帮助
一、	法定代理\n
1、	概念：\n
指代理人的代理权是根据法律的直接规定而产生的一种代理关系。如我国《民法通则》第14条规定:"无民事行为能力人、限制民事行为能力人的监护人是他的法定代理人。"\n
2、解释：\n
法定代理是为无诉讼能力的人设定的。未成年人和精神病人属于无诉讼能力的人。未成年人的父母是其监护人，如果没有父母或者父母没有监护能力，依法由祖父母、外祖父母、兄、姐以及依法确定的其他人、单位为监护人。精神病人，可由其配偶、父母、成年子女、其他近亲属以及依法确定的其他人、单位担任监护人。如果法定代理法定代理人为多人，并互相推诿代理责任时，为了保护被代理人的利益，保证诉讼活动的顺利进行，人民法院可以指定其中一人为诉讼代理人。\n
3、法定代理终止原因：\n
(1)被代理人取得或者恢复民事行为的能力;\n
(2)代理人死亡或者丧失民事行为能力;\n
(3)被代理的当事人死亡；\n
(4)诉讼代理人丧失了对当事人的亲权或监护人；\n
  此外，法定诉讼代理权虽未消灭，但在以下特定类型的诉讼中不得行使：（1）未成年人诉监护人不作为损害赔偿之诉；（2）未成年人诉监护人侵权赔偿之诉。\n
\n
二、	委托代理\n
1、概念：\n
委托代理，是指代理人的代理权根据被代理人的委托授权行为而产生。因委托代理中，被代理人是以意思表示的方法将代理权授予代理人的，故又称 "意定代理" 或 "任意代理"。民事法律行为的委托代理，可以用书面形式，也可以用口头形式。法律规定用书面形式的，应当用书面形式。当事人、法定代理人可以委托一至二人作为诉讼代理人。\n
2、下列人员可以被委托为诉讼代理人:\n
(一)律师、基层法律服务工作者;\n
(二)当事人的近亲属或者工作人员;\n
(三)当事人所在社区、单位以及有关社会团体推荐的公民。\n
3、授权委托书的内容：\n
书面委托代理的授权委托书应当载明代理人的姓名或者名称、代理事项、权限和期间，并由委托人签名或者盖章。委托书授权不明的，被代理人应当向第三人承担民事责任，代理人负连带责任。\n
4、转托：\n
委托代理人为被代理人的利益需要转托他人代理的，应当事先取得被代理人的同意。事先没有取得被代理人同意的，应当在事后及时告诉被代理人，如果被代理人不同意，由代理人对自己所转托的人的行为负民事责任，但在紧急情况下，为了保护被代理人的利益而转托他人代理的除外。\n
5、有下列情形之一的，委托代理终止:\n
(一)代理期间届满或者代理事务完成;\n
(二)被代理人取消委托或者代理人辞去委托;\n
(三)代理人死亡;\n
(四)代理人丧失民事行为能力;\n
(五)作为被代理人或者代理人的法人终止。\n
6、注意：\n
离婚案件有诉讼代理人的，本人除不能表达意思的以外，仍应出庭;确因特殊情况无法出庭的，必须向人民法院提交书面意见。\n
7、一般授权和特别授权：\n
一般授权代理是指代理人仅享有出庭、收集提供证据、辩论、起草代写诉状等法律文书等诉讼权利。\n
根据委托人授权，享有一般授权的代理人只能代理当事人行使其一般民事诉讼权利的代理，包括下列内容：(1)代为起诉、应诉;(2)代理申请诉讼保全或证据保全;(3)申请回避，向法庭提供证据，鉴定人和勘验人，要求重新鉴定调查或勘验请求调解，发表代理意见;(4)申请执行;(5)双方商定的其他可以代理的事项。　　\n
特别授权代理是指特别授权代理中代理人除享有一般授权代理的诉讼权利外,还可行使代为和解、上诉等涉及当事人实体利益的诉讼权利。\n
特别授权代理权限包括下列内容：(1)代为承认部分或全部诉讼请求;(2)代为放弃、变更或增加诉讼请求;(3)代为和解;(4)代为反诉;(5)代为提出或申请撤回上诉。\n
正确区别一般授权代理和特别授权代理对于准确地授权以及维护自身权益至关重要，律师事务所在与当事人订立委托代理合同时，除接受一般代理外，还可根据具体情况，接受特别授权代理中一项或全项。在处理授权代理时，应注意以下几个问题：\n
第一、特别授权代理必须有明确的授权列举，如果仅仅笼统地在委托代理合同中写上“全权代理”而无具体授权内容，则法律上只认为系一般授权代理;\n
第二、虽然两种授权权限完全由当事人自己决定，但是无论哪种授权，律师都会严格按照法律规定尽力维护当事人的合法权益。\n
第三、根据《律师法》的规定，在案件进程中，如当事人对聘请的律师不满意时，可单方面解除聘请合同。如因律师过错，律师事务所应退回预收的全部律师服务费;非因律师过错，所收律师服务费不予退还。\n
\n
注意事项：\n
一、下列案件或事项，法律援助中心不予提供法律援助，包括：\n
1、因申请人的过错责任侵犯他人的合法权益而引起的民事诉讼或刑事自诉案件。\n
2、因申请人过错而引起的行政诉讼案件。\n
3、申请人提供不出涉讼案件的有关证据而且无法调查取证的案件。\n
4、可由行政机关处理而不需通过诉讼程序的事务。\n
5、案情及法律程序简单，通常无须聘请法律服务人员代理的案件。\n
6、已竭尽法律救济的案件。\n
7、申请人提供不出任何证明材料或出具虚假证明骗取法援的。\n
8、其他经主管机关批准，法律援助中心对外声明不予受理的案件。\n
\n
二、申请流程材料\n
（一）申请人可以到市法律援助中心或市各区县法律援助机构直接申请援助，详细地址和电话请参看组织机构，也可以通过网上填报法律援助申请表申请援助。\n
（二）申请人申请法律援助，应当同时提交以下材料：\n
1、法律援助申请表，并载明以下事项：\n
（1）申请人的基本情况；\n
（2）申请法律援助的事实和理由；\n
（3）申请人的经济状况；\n
（4）申请人提供的证明、证据材料清单；\n
（5）申请人保证所提交的证明及证据材料属实的声明。\n
书写有困难的申请人，可口头提出申请，由接待人员按上述要求记入笔录，申请人签字或捺指印确认。\n
2、居民身份证、户籍证明或其它有效身份证明；\n
3、申请人住所地或户籍所在地的乡镇政府、街道办事处或申请人所在单位劳资、人事部门出具的申请人及家庭成员经济状况证明；\n
4、与所申请法律援助事项相关的证明及证据材料；\n
5、法律援助机构认为需要提供的其他材料。\n
（三）法律援助机构自收到申请援助事项的全部材料之日起十个工作日内进行审查，作出是否予以法律援助的决定：\n
1、对符合条件者，作出同意提供法律援助的书面决定，指派承办法律援助事务的法律服务机构，并通知受援人。法律援助机构与受援人应签订法律援助协议；\n
2、对不符合条件者，作出不予法律援助的决定，并书面通知申请人。\n
（四）申请人对法律援助机构作出的不符合法律援助条件的通知有异议的，可以向确定该法律援助机构的司法行政部门提出，司法行政部门应当在收到异议之日起5个工作日内进行审查\n
\n
如仍存在疑问，请咨询律师。欢迎您的致电和来访\n

    </string>
    <string name="avatar">头像</string>
    <string name="add_friend">添加好友</string>
    <string name="new_friend">新朋友</string>
    <string name="voice_up_tips">手指上滑，取消发送</string>
    <string name="todo">TODO</string>
    <string name="long_click">长按说话</string>
    <string name="location">位置</string>
    <string name="camera">相机</string>
    <string name="picture">相册</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_short_tips">录音时间太短</string>

</resources>
