<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.krisez.flowers.ui.helper_ui.HelperActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applier"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/apply_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fl"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/apply_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/click_choose"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TextFields" />
        </android.support.constraint.ConstraintLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describe"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/apply_describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/white"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="8"
            android:scrollbars="vertical"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

        <Button
            android:layout_margin="16dp"
            android:id="@+id/apply_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/submit" />

    </LinearLayout>


</ScrollView>
