<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/avatar"
            android:textSize="18sp" />

        <cn.krisez.flowers.widget.CircleImageView
            android:id="@+id/user_info_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/test" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/account"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_info_username"
            tools:text="12345678900"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/tools_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_info_nickname"
            tools:text="取个名字好难"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <Button
        android:id="@+id/user_info_add_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/add_friend" />
</LinearLayout>